--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/online.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/online.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ERP lab 행사관리</title>
+        <title>ERP lab 온라인</title>
         <link rel="stylesheet" href="/css/common.css" />
         <link rel="stylesheet" href="/webdesign/assets/css/main.css"/>
         <link rel="stylesheet" href="/css/c/online.css" />
     </head>
     <body>
+		<th:block th:insert="~{thymeleaf/common/header::header}"></th:block>
+
         <div class="online_container">
-            <h2 class="online_title"><a th:href="@{/c/c34/online}">클레임(기업)</a></h2>
+            <h2 class="online_title"><a th:href="@{/c/c34/online}">온라인매출</a></h2>
             <div class="online_body">
                 <div class="online_regist">
 					<table class="online_search">
@@ -59,6 +61,45 @@
 						<span class="red">는 필수 입력란입니다.</span>
 					</div>
                     <form th:action="@{/d/d51/claim}" method="post" id="online_frm">
+						<div class="sec">
+							<button type="button" id="addRow_btn">행추가</button>
+							<button type="button" id="delRow_btn">행삭제</button>
+						</div>
+						
+						<table class="item_list_result">
+							 <tr>
+								<th class="sec1">조회</th>
+								<th class="sec2">로트번호</th>
+	                            <th class="sec3">수량</th>
+	                            <th class="sec4">제조일자</th>
+	                            <th class="sec5">유통기한</th>
+	                            <th class="sec6">총원가</th>
+	                            <th class="sec7">품목삭제</th>
+	                        </tr>
+                        	<th:block th:if="${goodslot_list != null}">
+								<tr class="list_result_items" th:each="goodslot_item : ${goodslot_list}">
+									<td><button class="list_result_btn" id="list_result_search">SEARCH</button></td>
+									<td><input type="text" name="goodslot_no" id="goodslot_no" th:value="${goodslot_item.goodslot_no}" readonly/></td>
+		                            <td><input type="text" name="goodslot_qty" id="goodslot_qty" th:value="${goodslot_item.goodslot_qty}" readonly/></td>
+		                            <td><input type="text" name="goodslot_production" id="goodslot_production" th:value="${goodslot_item.goodslot_production}" readonly/></td>
+		                            <td><input type="text" name="goodslot_expiry" id="goodslot_expiry" th:value="${goodslot_item.goodslot_expiry}" readonly/></td>
+		                            <td><input type="text" name="goodslot_total" id="goodslot_total" th:value="${goodslot_item.goodslot_total}" readonly/></td>
+		                            <td><button class="list_result_btn" id="list_result_del">품목삭제</button></td>
+								</tr>
+							</th:block>
+							<th:block th:if="${goodslot_list == null}">
+								<tr class="list_result_items order0">
+									<td><button class="list_result_btn" id="list_result_search0">SEARCH</button></td>
+									<td><input type="text" name="goodslot_no" id="goodslot_no0" /></td>
+		                            <td><input type="text" name="goodslot_qty" id="goodslot_qty0"/></td>
+		                            <td><input type="text" name="goodslot_production" id="goodslot_production0" /></td>
+		                            <td><input type="text" name="goodslot_expiry" id="goodslot_expiry0" /></td>
+		                            <td><input type="text" name="goodslot_total" id="goodslot_total0"/></td>
+		                            <td><button class="list_result_btn" id="list_result_del0">품목삭제</button></td>
+								</tr>
+							</th:block>
+						</table>
+						
 						<input type="hidden" name="online_no" id="online_no" th:value="${erp_OnlineVO?.online_no}"/>
 						
             			<div class="sec">
@@ -178,6 +219,8 @@
                 </div>
             </div>
         </div>
+
+		<th:block th:insert="~{thymeleaf/common/footer::footer}"></th:block>
 
      	<script src="/webdesign/assets/js/jquery.min.js"></script>
         <script src="/webdesign/assets/js/browser.min.js"></script>
