--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/forsales_list.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/c/forsales_list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>상품목록조회</title>
+    <title>해외영업매출조회</title>
 
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/webdesign/assets/css/main.css" />
