erp chat list room
erp chat css

--- a/workspace2/ERPlab/src/main/resources/static/css/intranet/chat/chatRoom.css
+++ b/workspace2/ERPlab/src/main/resources/static/css/intranet/chat/chatRoom.css
@@ -53,6 +53,7 @@
         background-color: rgb(208, 255, 113);
         padding: 1%; margin: 0;
         flex-grow: 1;
+        font-size: 7px;
         overflow: auto;
     }
     
